# Zadacha_k_ekzamenu

./: CMakeLists.txt  README.md
include/: DatabaseConnection.h  Models.h  Payments.h  Users.h  Utils.h
sql/: functions.sql  procedures.sql  sample_data.sql  tables.sql  triggers.sql
src/: Models.cpp  Payments.cpp  Users.cpp  Utils.cpp  main.cpp
